--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,53 @@
-version '1.0-SNAPSHOT'
+/*
+ * Electronic Logistics Management Information System (eLMIS) is a supply chain management system for health commodities in a developing country setting.
+ *
+ * Copyright (C) 2015  John Snow, Inc (JSI). This program was produced for the U.S. Agency for International Development (USAID). It was prepared under the USAID | DELIVER PROJECT, Task Order 4.
+ *
+ * This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
 
-apply plugin: 'java'
+/*
+ * This program is part of the OpenLMIS logistics management information system platform software.
+ * Copyright © 2013 VillageReach
+ *
+ * This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+ *  
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details.
+ * You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info@OpenLMIS.org. 
+ */
 
-sourceCompatibility = 1.5
-
-repositories {
-    mavenCentral()
-}
+apply plugin: 'cobertura'
 
 dependencies {
-    compile 'org.projectlombok:lombok:1.16.2',
 
-            'com.fasterxml.jackson.core:jackson-databind:2.5.1',
-            'com.fasterxml.jackson.core:jackson-core:2.5.1',
-            'com.fasterxml.jackson.core:jackson-annotations:2.5.1',
+    compile  project(':modules:core')
 
-            'org.springframework:spring-webmvc:4.1.5.RELEASE',
-            'org.springframework:spring-core:4.1.5.RELEASE',
-            'org.springframework:spring-web:4.1.5.RELEASE',
-            'org.springframework:spring-aspects:4.1.5.RELEASE',
 
-            'com.wordnik:swagger-annotations:1.3.12',
-            'com.mangofactory:swagger-models:0.9.5',
-            'com.mangofactory:swagger-springmvc:0.9.5'
+    testCompile project(path: ':modules:core', configuration: 'testFixtures')
 
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+
+    configurations {
+        testFixtures {
+            extendsFrom testRuntime
+        }
+    }
+
+    task testJar(type: Jar) {
+        from sourceSets.test.output
+        classifier = 'test'
+    }
+
+    artifacts {
+        testFixtures testJar
+    }
+}
+
+cobertura {
+    coverageFormats << 'xml'
+    coverageIgnoreTrivial = true
+
 }
