--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ apply plugin: 'cobertura'
 
 dependencies {
 
-    compile  project(':modules:core')
-
+    compile 'com.wordnik:swagger-annotations:1.3.12',
+            project(':modules:core')
 
     testCompile project(path: ':modules:core', configuration: 'testFixtures')
 
@@ -49,5 +49,4 @@ dependencies {
 cobertura {
     coverageFormats << 'xml'
     coverageIgnoreTrivial = true
-
 }
